--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
 
 
-<section id="our-measures" style="background-color: rgba(0, 126, 172, 0.521);">
+<section id="our-measures">
     <div class="row about-wrap">
         <div class="col-half left-image">
             <!-- Add your image here -->
@@ -155,7 +155,7 @@
             <div class="intro">
                 <h3 class="animate-this">Our Measures</h3>
                 <p class="lead animate-this">
-                    <span>Chemitec International</span> is committed to ensuring the highest standards of quality and safety in our food ingredient development processes. Our stringent measures guarantee that all our solutions not only meet but exceed industry standards for quality and safety compliance.
+                    At <span>Chemitec International</span> , we prioritize quality and safety in every step of our food ingredient development. Our rigorous standards ensure that our solutions consistently surpass industry requirements, delivering unmatched reliability and excellence in every product.
                 </p>
             </div>
             <a href="#" class="info-button">Learn More!</a>
