--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 </section> <!-- end about -->
 <section id="split-section">
     <div id="QC" class="split left-side">
-        <img src="images/QC.png" srcset="images/QC768w.png 768w" alt="Quality and Safety" class="image">
+        <img src="images/QC.jpg" srcset="images/QC768w.jpg 768w" alt="Quality and Safety" class="image">
     </div>
     <div class="split right-side">
         <div class="content">
@@ -195,14 +195,14 @@
         </div>
     </div>
     <div class="split left-side">
-        <img src="images/mntcp.png" alt="Maintenance" class="image">
+        <img src="images/mntcp.jpg" alt="Maintenance" class="image">
     </div>
 </section>
 
 
 <section id="split-section">
     <div id="lslb" class="split left-side">
-        <img src="images/LB.png" srcset="images/Lab768w.png 768w" alt="Laboratory" class="image">
+        <img src="images/LB.jpg" srcset="images/Lab768w.jpg 768w" alt="Laboratory" class="image">
     </div>
     <div class="split right-side">
         <div class="content">
@@ -224,14 +224,14 @@
         </div>
     </div>
     <div class="split left-side">
-        <img src="images/mntcp.png" alt="Maid" class="image">
+        <img src="images/mntcp.jpg" alt="Maid" class="image">
     </div>
 </section>
 
 <section id="split-section">
     <div id="lbna" class="split left-side">
-        <img id="labanapic" src="images/labana.png" alt="Labana" class="image desktop-only">
-        <img id="labanapic" src="images/labanaM798.png" alt="Labana" class="image mobile-only">
+        <img id="labanapic" src="images/labana.jpg" alt="Labana" class="image desktop-only">
+        <img id="labanapic" src="images/labanaM798.jpg" alt="Labana" class="image mobile-only">
     </div>
     <div class="split right-side">
         <div class="content">
