--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
 					<div><img src="images/products/DIPO.png" alt="DIPO"></div>
 					<div><img src="images/products/Montana.png" alt="Montana"></div>
 					<div><img src="images/products/odella.png" alt="odella"></div>
+                    <div><img src="images/products/meravili.png" alt="meravili"></div>
 				</div>
 				
 			</div> <!-- end col-twelve -->
