--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 			<div class="col-twelve">
 
 				<div class="client-lists owl-carousel">
-  					<div><img src="images/products/Banox.png" alt="Banox"></div>
+  					<div><a href="Banox.html"><img src="images/products/Banox.png" alt="Banox"></a></div>
   					<div><img src="images/products/Banovit.png" alt="Banovit"></div>
 					<div><img src="images/products/cila.png" alt="Cila"></div>
 					<div><img src="images/products/Cila Soya.png" alt="Cila Soya"></div>
