Updates and products

--- a/Cila.html
+++ b/Cila.html
@@ -191,7 +191,79 @@
 </section>
 
  <hr>
-
+ <section id="CPI-getknow">
+    <div class="overlay">
+        <h3>Enhancing Every Bite with Quality Ingredients</h3>
+    </div>
+ </section>
+ <hr>
+ <section id="CPI-products">
+    <h2>CILA Pasta Improver</h2>
+    <div class="table-container">
+        <table id="CPI-table">
+            <thead>
+                <tr>
+                    <th>Product</th>
+                    <th>Application</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>CILA P</td>
+                    <td>Non durum pasta flour</td>
+                </tr>
+                <tr>
+                    <td>CILA P gold</td>
+                    <td>Non durum pasta flour</td>
+                </tr>
+                <tr>
+                    <td>CILA P max</td>
+                    <td>Non durum pasta flour</td>
+                </tr>
+                <tr>
+                    <td>CILA P pasta</td>
+                    <td>Non durum pasta flour</td>
+                </tr>
+                <tr>
+                    <td>CILA P special</td>
+                    <td>Special purpose non durum pasta flour</td>
+                </tr>
+                <tr>
+                    <td>CILA R</td>
+                    <td>Pasta food color</td>
+                </tr>
+                <tr>
+                    <td>CILA C</td>
+                    <td>Pasta food color</td>
+                </tr>
+                <tr>
+                    <td>CILA PMC</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>CILA A</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>CILA OX</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>CILAZYME P</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>CILAZYME PM</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>CILAZYME E</td>
+                    <td>-</td>
+                </tr>
+                </tbody>
+        </table>
+    </div>
+</section>
 	<!-- footer
    ================================================== -->
 	<footer>
