--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Chemitec International for Food Industries</title>
+	<title>Chemitec Dr.Labana</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -40,7 +40,7 @@
    <header> 
 
    	<div class="header-logo">
-	      <a href="index.html">Infinity</a>
+	      <a href="index.html">Chemitec Dr.Labana</a>
 	   </div> 
 
 		<a id="header-menu-trigger" href="#0">
@@ -57,9 +57,9 @@
 			<ul class="nav-list">
 				<li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
 				<li><a class="smoothscroll" href="#about" title="">About Us</a></li>
-				<li><a class="smoothscroll" href="#services" title="">Quality</a></li>
-				<li><a class="smoothscroll" href="#clients" title="">Services</a></li>
-				<li><a class="smoothscroll" href="#contact" title="">Products</a></li>						
+				<li><a class="smoothscroll" href="#service" title="">Services</a></li>
+				<li><a class="smoothscroll" href="#clients" title="">Products</a></li>
+				<li><a class="smoothscroll" href="#lbna" title="">Dr.Labana</a></li>						
 			</ul>	
 	
 
@@ -91,7 +91,7 @@
         
         <!-- Text content -->
         <div class="home-content">
-            <h3 class="animate-intro">Chemitec International</h3>
+            <h3 class="animate-intro">Chemitec Dr.Labana</h3>
             <h1 class="animate-intro">
                 Innovation
 				You Can Taste.
@@ -130,13 +130,12 @@
             <div class="intro">
                 <h3 class="animate-this">About Us</h3>
                 <p class="lead animate-this">
-                    <span>Chemitec International</span> 
+                    <span>Chemitec Dr.Labana</span> 
 					 is a leading innovator in food ingredient development, specializing in high-quality solutions for the bakery and dairy sectors.
                 </p>
             </div>
         </div>
         <div class="col-half right-image">
-            <!-- Add your image here -->
             <img src="images\LogoC.png" alt="About Us" class="about-image">
         </div>
     </div> <!-- end about-wrap -->
@@ -188,7 +187,7 @@
 
    <section id="split-section-reverse">
     <div class="split right-side">
-        <div class="content">
+        <div id="service" class="content">
             <h3 class="animate-this">OUR SERVICES</h3>
 			<img id="mntc-srv" src="images/mntc.png">
             <p id="mntc-paragraph">Maximize Performance Minimize Downtime!</p>
