--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       	<div class="row">
       		<div class="col-twelve">
 	      		<div class="copyright">
-		         	<span>© Copyright Chemitec International 2024</span> 	         	
+		         	<span>© Copyright Chemitec Dr.Labana 2024</span> 	         	
 		         </div>		               
 	      	</div>
 
