--- a/Lab.html
+++ b/Lab.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>BANOX - Chemitec Dr.Labana</title>
+	<title>Laboratory - Chemitec Dr.Labana</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -55,20 +55,20 @@
 	   	<img src="images\LOGO ICON.png" id="bar-icon">  
 
 			<ul class="nav-list">
-				<li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
-				<li><a class="smoothscroll" href="#about" title="">About Us</a></li>
-				<li><a class="smoothscroll" href="#services" title="">Quality</a></li>
-				<li><a class="smoothscroll" href="#clients" title="">Services</a></li>
-				<li><a class="smoothscroll" href="#contact" title="">Products</a></li>						
+				<li><a href="index.html" title="">Home</a></li>
+				<li><a class="smoothscroll" href="About.html" title="">About Us</a></li>
+				<li><a class="smoothscroll" href="#" title="">Quality</a></li>
+				<li><a class="smoothscroll" href="#" title="">Services</a></li>
+				<li><a class="smoothscroll" href="#" title="">Products</a></li>						
 			</ul>	
 	
 
 			<ul class="header-social-list">
 	         <li>
-	         	<a href="#"><i class="fa fa-facebook-square"></i></a>
+	         	<a href="https://www.facebook.com/CHEMITECLABANA?mibextid=LQQJ4d"><i class="fa fa-facebook-square"></i></a>
 	         </li>
 	         <li>
-	         	<a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+	         	<a href="mailto:info@chemitecgroup.net?subject=Inquiry&body=Hello,%20I%20would%20like%20more%20information."><i class="fa fa-envelope" aria-hidden="true"></i></a>
 	         </li>
 	      </ul>		
 
@@ -78,7 +78,7 @@
 
         <section id="split-section">
             <div id="BX-pck" class="split left-side">
-                <img src="images/LOGO ICON.png" alt="Banovit Package" class="image">
+                <img src="images/Lab-1.jpg" alt="Banovit Package" class="image">
             </div>
             <div id="BX-content" class="split right-side">
                 <div class="content">
@@ -98,12 +98,12 @@
         </div>
     </div>
     <div class="split left-side">
-        <img src="images/mntcp.jpg" alt="Maintenance" class="image">
+        <img src="images/Lab-2.jpg" alt="Maintenance" class="image">
     </div>
 </section>
 <section id="split-section">
     <div id="BX-pck" class="split left-side">
-        <img src="images/LOGO ICON.png" alt="Banovit Package" class="image">
+        <img src="images/Lab-3.jpg" alt="Banovit Package" class="image">
     </div>
     <div id="BX-content" class="split right-side">
         <div class="content">
@@ -113,12 +113,13 @@
         </div>
     </div>
 </section>
+<hr>
  <section id="BX-getknow">
     <div class="overlay">
-        <h3>Your Secret Ingredient,<br> for Every Recipe!</h3>
+        <h3>Your Secret Ingredient, for Every Recipe!</h3>
     </div>
  </section>
-
+<hr>
  <section id="split-section-reverse">
     <div class="split right-side">
         <div class="content">
@@ -128,7 +129,7 @@
         </div>
     </div>
     <div class="split left-side">
-        <img src="images/mntcp.jpg" alt="Maintenance" class="image">
+        <img src="images/Lab-4.jpg" alt="Maintenance" class="image">
     </div>
 </section>
 <hr>
@@ -178,7 +179,7 @@
         <p>We have the international standard that specifies the general requirements for the competence of testing and calibration laboratories.</p>
     </div>
 </div>
-
+<hr>
 
 	<!-- footer
    ================================================== -->
